# fastapi-application-template

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
.github/actions/tests/: action.yml
.github/workflows/: branch-cleanup.yml  cd.yml  pr.yml  remove-untagged.yml
app/: __init__.py
app/greetings/: __init__.py  routes.py
app/healthcheck/: __init__.py  routes.py
app/hello/: __init__.py  routes.py
app/lib/: get_config.py
app/version/: __init__.py  routes.py
test/: test_build.py  test_greetings.py  test_healthcheck.py  test_hello.py
